RESOLVED FIXED282968
media/media-vp8-hiddenframes.html is an intermittent failure on iOS simulator
https://bugs.webkit.org/show_bug.cgi?id=282968
Summary media/media-vp8-hiddenframes.html is an intermittent failure on iOS simulator
Jean-Yves Avenard [:jya]
Reported 2024-11-11 21:31:31 PST
https://ews-build.s3-us-west-2.amazonaws.com/iOS-17-Simulator-WK2-Tests-EWS/f1d41335-49440-stress-mode/media/media-vp8-hiddenframes-diffs.html it was supposed to have been fixed by bug 278833 Experimentation shows that while playback from 0 to the end works fine, if you seek back and forth a few times, the image becomes corrupted, as if some hidden frame was decoded. I can reproduce on the iOS 17 simulator, but not in MiniBrowser even when using the exact same codepath with WebCoreDecompressionSession and WebCodec's VideoDecoder.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-11-11 21:31:52 PST
Jean-Yves Avenard [:jya]
Comment 2 2024-11-12 02:15:08 PST
EWS
Comment 3 2024-11-12 17:36:03 PST
Committed 286512@main (e5d420f7968f): <https://commits.webkit.org/286512@main> Reviewed commits have been landed. Closing PR #36520 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.