Source/WebCore/platform/graphics/cocoa/WebCoreDecompressionSession.h
@@ -155,7 +155,7 @@ private:
     std::atomic<unsigned> m_framesSinceLastQosCheck { 0 };
     double m_decodeRatioMovingAverage { 0 };
 
-    uint32_t m_flushId { 0 };
+    std::atomic<uint32_t> m_flushId { 0 };
     std::atomic<bool> m_isUsingVideoDecoder { true };
     std::unique_ptr<VideoDecoder> m_videoDecoder WTF_GUARDED_BY_LOCK(m_lock);
     bool m_videoDecoderCreationFailed { false };
